Project

General

Profile

Actions

Bug #48327

closed

Infinite loop in old reset-stats

Added by Abhishek Lekshmanan over 3 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

from-index was not updated causing a inf loop for buckets > 1000


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #48803: nautilus: Infinite loop in old reset-stats ResolvedNathan CutlerActions
Copied to rgw - Backport #48804: octopus: Infinite loop in old reset-stats ResolvedNathan CutlerActions
Actions #1

Updated by Casey Bodley over 3 years ago

  • Status changed from New to Fix Under Review
  • Backport set to nautilus octopus
  • Pull request ID set to 38242
Actions #2

Updated by J. Eric Ivancich over 3 years ago

  • Assignee set to Abhishek Lekshmanan
Actions #3

Updated by Nathan Cutler over 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Backport Bot over 3 years ago

  • Copied to Backport #48803: nautilus: Infinite loop in old reset-stats added
Actions #5

Updated by Backport Bot over 3 years ago

  • Copied to Backport #48804: octopus: Infinite loop in old reset-stats added
Actions #6

Updated by Nathan Cutler about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF