rgw: cls/user: set from_index for reset stats calls

Fixes: https://tracker.ceph.com/issues/48327
Signed-off-by: Mykola Golub <mgolub@suse.com>
Signed-off-by: Abhishek Lekshmanan <abhishek@suse.com>
(cherry picked from commit 8dd07c8d185d18c34525c9ed8aca4d62e976a675)